# CML_toy

./: README.md  pyproject.toml
output/: txtFileWithOutput.txt  txtFileWithOutput_Summary.txt
output/ate_iate/csv/: ATEempl_chge_lc.csv  ATEsal_3_lc.csv  ATEsal_4_lc.csv  ATEsal_5_lc.csv  ATEsal_6_lc.csv  ATEsal_7_lc.csv  ATEsal_8_lc.csv  ATEsal_9_lc.csv  ATEsal_avg_lc.csv  Densityempl_ttl_lc1vs0_iateplotdat.csv  Densityempl_ttl_lc2vs0_iateplotdat.csv  Densitysal_3_lc1vs0_iateplotdat.csv  Densitysal_3_lc2vs0_iateplotdat.csv  Densitysal_4_lc1vs0_iateplotdat.csv  Densitysal_4_lc2vs0_iateplotdat.csv  Densitysal_5_lc1vs0_iateplotdat.csv  Densitysal_5_lc2vs0_iateplotdat.csv  Densitysal_6_lc1vs0_iateplotdat.csv  Densitysal_6_lc2vs0_iateplotdat.csv  Densitysal_7_lc1vs0_iateplotdat.csv  Densitysal_7_lc2vs0_iateplotdat.csv  Densitysal_8_lc1vs0_iateplotdat.csv  Densitysal_8_lc2vs0_iateplotdat.csv  Densitysal_9_lc1vs0_iateplotdat.csv  Densitysal_9_lc2vs0_iateplotdat.csv  Densitysal_avg_lc1vs0_iateplotdat.csv  Densitysal_avg_lc2vs0_iateplotdat.csv  Sortedempl_chge_lc1vs0_iateplotdat.csv  Sortedempl_ttl_lc1vs0_iateplotdat.csv  (+543 more)
output_data/: distribution_comparison.txt  nan_percentage.txt  nan_statistics.txt  sample_sizes.txt  sample_statistics.txt
output_treatment_effect/: txtFileWithOutput.txt  txtFileWithOutput_Summary.txt
output_treatment_effect_placebo/: txtFileWithOutput.txt  txtFileWithOutput_Summary.txt
src/: main_data_preprocess.py  parameter.json  plot_by_nan.py  plot_by_region.py  plot_ptype.py  propensity_score.py  sample_statistics.py  test.py  treatment_effect.py
(+1330 files in other folders)
