[project]
name = "CML_toy"
version = "0.1.0"
description = "A simple Python project using uv for dependency management"
requires-python = ">=3.12"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.2.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scikit-learn==1.6.1"
]